...
        _colour = State(wrappedValue: project.projectColor)
    }

    /// A section view that contains the settings view elements.
    private var settingsSection: some View {
        Section(header: Text("Basic settings")) {
            TextField("Project name", text: $title.onChange(update))
            TextField("Description of this project", text: $detail.onChange(update))
        }
    }

    /// A section view that contains the colour picker view elements.
    private var colourSection: some View {
...
